--- a/dot_config/gtk-3.0/gtk.css
+++ b/dot_config/gtk-3.0/gtk.css
@@ -1,140 +1,87 @@
-:root {
-  --rose1:#F4DAF2;
-  --rose2:#EC80E3;
-  --rose3:#CB3BBF;
-  --rose4:#8E3086;
-  --vert1:#DAF4EA;
-  --vert2 :#7FEBC2;
-  --vert3:#3BCB95;
-  --vert4:#308D6A;
-  --jaune1:#FFF9E4;
-  --jaune2:#FFE38A;
-  --jaune3:#FFD44A;
-  --jaune4:#D1B046;
-}
+/*@import url("./themes/rose.css");*/
 
+/* à replacer */
 
-@define-color theme_hovering_selected_bg_color_breeze var(--vert2);
-@define-color theme_fg_color_breeze #232629;
-/*
-text color for entries, views and content in general */
-@define-color theme_text_color_breeze #232629;
-/*
-widget base background color */
-@define-color theme_bg_color_breeze #EC80E3;
-/*
-text widgets and the like base background color */
-@define-color theme_base_color_breeze #f4daf2;
-/*
-view hover decoration color*/
-@define-color theme_view_hover_decoration_color_breeze black;
-/*
-background color of hovering selected widgets*/
-@define-color theme_hovering_selected_bg_color_breeze #7febc2;
-/*
-base background color of selections */
-@define-color theme_selected_bg_color_breeze #7febc2
-/*
-text/foreground color of selections */
-@define-color theme_selected_fg_color_breeze #7febc2;
-/*
-decoration color of views */
-@define-color theme_view_active_decoration_color_breeze #f4daf2;
-/*
-base background color of insensitive selections */
-@define-color insensitive_selected_bg_color_breeze rgba(37, 164, 230, 0.35);
-/*
-base background color of insensitive widgets */
-@define-color insensitive_bg_color_breeze red;
-/*
-text foreground color of insensitive widgets */
-@define-color insensitive_fg_color_breeze rgba(32, 35, 37, 0.35);
-/*
-insensitive text widgets and the like base background color */
-@define-color insensitive_base_color_breeze rgba(32, 35, 37, 0.35);
-/*
-insensitive text widgets and the like base foreground color */
-@define-color insensitive_base_fg_color_breeze #e8e8e8;
-/*
-insensitive selected text widgets and the like base background color */
-@define-color insensitive_selected_fg_color_breeze #e8e8e8;
-/*
-widget text/foreground color on backdrop windows */
 @define-color theme_unfocused_fg_color_breeze #232629;
-/*
-text color for entries, views and content in general on backdrop windows */
 @define-color theme_unfocused_text_color_breeze #232629;
-/*
-widget base background color on backdrop windows */
-@define-color theme_unfocused_bg_color_breeze #eC80E3;
-/*
-text widgets and the like base background color on backdrop windows */
-@define-color theme_unfocused_base_color_breeze #F4DAF2;
-
-@define-color theme_unfocused_selected_bg_color_alt_breeze #rfebc2;
-/*
-base background color of selections on backdrop windows */
+@define-color theme_unfocused_bg_color_breeze #eff0f1;
+@define-color theme_unfocused_base_color_breeze white;
+@define-color theme_unfocused_selected_bg_color_alt_breeze #3daee9;
 @define-color theme_unfocused_selected_bg_color_breeze rgba(61, 174, 233, 0.5);
-/*
-text/foreground color of selections on backdrop windows */
 @define-color theme_unfocused_selected_fg_color_breeze white;
-/*
-base background color of insensitive selections on backdrop windows */
-@define-color insensitive_unfocused_selected_bg_color_breeze rgba(37, 164, 230, 0.35);
-/*
-text foreground color of insensitive widgets on backdrop windows*/
-@define-color insensitive_unfocused_fg_color_breeze rgba(32, 35, 37, 0.35);
-/*
-backdground color of insensitive widgets on backdrop windows*/
-@define-color insensitive_unfocused_bg_color_breeze #d8dadd;
-/*
-text foreground color of insensitive selected widgets on backdrop windows*/
-@define-color insensitive_unfocused_selected_fg_color_breeze #e8e8e8;
-/*
-view text foreground color of insensitive widgets on backdrop windows */
-@define-color theme_unfocused_view_text_color_breeze rgba(32, 35, 37, 0.35);
-/*
-insensitive view background color on backdrop windows */
-@define-color theme_unfocused_view_bg_color_breeze #e8e8e8;
-/*
-widgets main borders color */
-@define-color borders_breeze #c6c8c9;
-/*
-widgets main borders color on backdrop windows */
 @define-color unfocused_borders_breeze #c6c8c9;
-/*
-widgets main borders color insensitive */
+@define-color insensitive_bg_color_breeze #d8dadd;
+@define-color insensitive_fg_color_breeze rgba(32, 35, 37, 0.35);
+@define-color insensitive_base_color_breeze rgba(32, 35, 37, 0.35);
+@define-color insensitive_base_fg_color_breeze #e8e8e8;
+@define-color insensitive_selected_fg_color_breeze #e8e8e8;
+@define-color insensitive_selected_bg_color_breeze rgba(37, 164, 230, 0.35);
 @define-color insensitive_borders_breeze rgba(179, 182, 183, 0.35);
+
+@define-color insensitive_unfocused_selected_bg_color_breeze rgba(37, 164, 230, 0.35);
+@define-color insensitive_unfocused_fg_color_breeze rgba(32, 35, 37, 0.35);
+@define-color insensitive_unfocused_bg_color_breeze #d8dadd;
+@define-color insensitive_unfocused_selected_fg_color_breeze #e8e8e8;
+@define-color theme_unfocused_view_text_color_breeze rgba(32, 35, 37, 0.35);
+@define-color theme_unfocused_view_bg_color_breeze #e8e8e8;
+
+
+@define-color tooltip_text_breeze #232629;
+@define-color tooltip_background_breeze red;
+@define-color tooltip_border_breeze #cdcdce;
 /*
-widgets main borders color insensitive backdrop */
-@define-color unfocused_insensitive_borders_breeze rgba(179, 182, 183, 0.35);
-/*
-*
-* Button Colors
-*
+* Misc
 */
-@define-color theme_button_background_normal_breeze #FFF9E4;
+@define-color print_paper_backdrop_breeze #ec80e3;
 
-@define-color theme_button_decoration_hover_breeze  #3daee9;
+/* couleur de fond */
+@define-color theme_bg_color_breeze #ec80e3;
+@define-color theme_titlebar_background_backdrop_breeze #EC80E3;
+@define-color theme_titlebar_background_breeze #EC80E3;
+@define-color theme_titlebar_background_light_breeze #ec80e3;
+@define-color print_paper_backdrop_breeze #ec80e3;
+@define-color content_view_bg_breeze red;
+@define-color theme_base_color_breeze #F4DAF2;
+@define-color theme_hovering_selected_bg_color_breeze #FFF9E4;
+@define-color theme_selected_bg_color_breeze #CB3BBF;
+@define-color theme_button_background_normal_breeze #fcfcfc;
+@define-color theme_button_background_insensitive_breeze        #e5e5e5;
+@define-color theme_button_background_backdrop_breeze        #fcfcfc;
+@define-color theme_button_background_backdrop_insensitive_breeze        #e5e5e5;
 
-@define-color theme_button_decoration_focus_breeze  #3daee9;
+/*couleur de texte*/
+
+@define-color theme_fg_color_breeze black;
+@define-color theme_text_color_breeze black;
+@define-color theme_selected_fg_color_breeze white;
+@define-color theme_titlebar_foreground_breeze #232629;
+@define-color theme_titlebar_foreground_backdrop_breeze #707d8a;
+@define-color theme_titlebar_foreground_insensitive_breeze rgba(32, 35, 37, 0.35);
+@define-color theme_titlebar_foreground_insensitive_backdrop_breeze rgba(102, 114, 125, 0.35);
+
 @define-color theme_button_foreground_normal_breeze #232629;
 @define-color theme_button_foreground_active_breeze white;
-@define-color theme_button_background_insensitive_breeze        #e5e5e5;
-@define-color theme_button_decoration_hover_insensitive_breeze  rgba(37, 164, 230, 0.35);
-@define-color theme_button_decoration_focus_insensitive_breeze  rgba(37, 164, 230, 0.35);
-@define-color theme_button_foreground_insensitive_breeze        rgba(32, 35, 37, 0.35);
-@define-color theme_button_foreground_active_insensitive_breeze #e8e8e8;
-@define-color theme_button_background_backdrop_breeze        #fcfcfc;
-@define-color theme_button_decoration_hover_backdrop_breeze  #3daee9;
-@define-color theme_button_decoration_focus_backdrop_breeze  #3daee9;
-@define-color theme_button_foreground_backdrop_breeze        #232629;
-@define-color theme_button_foreground_active_backdrop_breeze white;
-@define-color theme_button_background_backdrop_insensitive_breeze        #e5e5e5;
-@define-color theme_button_decoration_hover_backdrop_insensitive_breeze  rgba(37, 164, 230, 0.35);
-@define-color theme_button_decoration_focus_backdrop_insensitive_breeze  rgba(37, 164, 230, 0.35);
 @define-color theme_button_foreground_backdrop_insensitive_breeze        rgba(32, 35, 37, 0.35);
 @define-color theme_button_foreground_active_backdrop_insensitive_breeze #e8e8e8;
+@define-color theme_button_foreground_backdrop_breeze        #232629;
+@define-color theme_button_foreground_active_backdrop_breeze white;
+@define-color theme_button_foreground_insensitive_breeze        rgba(32, 35, 37, 0.35);
+@define-color theme_button_foreground_active_insensitive_breeze #e8e8e8;
+
+
+/*autre couleur*/
+
+@define-color theme_view_hover_decoration_color_breeze red;
+@define-color theme_view_active_decoration_color_breeze red;
+@define-color borders_breeze #8E3086;
+@define-color theme_button_decoration_hover_insensitive_breeze  rgba(37, 164, 230, 0.35);
+@define-color theme_button_decoration_focus_insensitive_breeze  rgba(37, 164, 230, 0.35);
+@define-color theme_button_decoration_hover_backdrop_breeze  #3daee9;
+@define-color theme_button_decoration_focus_backdrop_breeze  #3daee9;
+@define-color theme_button_decoration_hover_backdrop_insensitive_breeze  rgba(37, 164, 230, 0.35);
+@define-color theme_button_decoration_focus_backdrop_insensitive_breeze  rgba(37, 164, 230, 0.35);
+@define-color theme_button_decoration_hover_breeze  #3daee9;
+@define-color theme_button_decoration_focus_breeze  #3daee9;
 /*
 these are pretty self explicative */
 @define-color warning_color_breeze #f67400;
@@ -151,29 +98,7 @@ these are pretty self explicative */
 @define-color success_color_insensitive_backdrop_breeze rgba(35, 158, 87, 0.35);
 @define-color link_color_breeze #2980b9;
 @define-color link_visited_color_breeze #9b59b6;
-/*
-*
-* Titlebar Colors
-*
-*/
-@define-color theme_titlebar_background_breeze          #e3e5e7;
-@define-color theme_titlebar_foreground_breeze          #232629;
-@define-color theme_titlebar_background_light_breeze    #eff0f1;
-@define-color theme_titlebar_foreground_backdrop_breeze #707d8a;
-@define-color theme_titlebar_background_backdrop_breeze #eff0f1;
-@define-color theme_titlebar_foreground_insensitive_breeze rgba(32, 35, 37, 0.35);
-@define-color theme_titlebar_foreground_insensitive_backdrop_breeze rgba(102, 114, 125, 0.35);
-/*
-* Tooltips
-*/
-@define-color tooltip_text_breeze #232629;
-@define-color tooltip_background_breeze #f7f7f7;
-@define-color tooltip_border_breeze #cdcdce;
-/*
-* Misc
-*/
-@define-color print_paper_backdrop_breeze  white;
-@define-color content_view_bg_breeze white;
+
 /*
  * GTK API color re-defs
  */
@@ -199,6 +124,7 @@ these are pretty self explicative */
 @define-color error_color @error_color_breeze;
 @define-color success_color @success_color_breeze;
 @define-color content_view_bg @content_view_bg_breeze;
+
 *, button:link,
 button:visited {
   padding: 0;
@@ -4472,4 +4398,3 @@ window.background.chromium {
       background-color: alpha(@theme_button_decoration_hover_breeze,0.5); }
     #MozillaGtkWidget scrollbar slider:focus {
       background-color: alpha(@theme_button_decoration_focus_breeze,0.5); }
-@import 'colors.css';
